# Veritaware.Toolkits.CWEL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Veritaware.Toolkits.CWEL.sln  Veritaware.Toolkits.CWEL.sln.DotSettings
Veritaware.Toolkits.CWEL/: Color.h  Veritaware.Toolkits.CWEL.cpp  Veritaware.Toolkits.CWEL.vcxproj  Veritaware.Toolkits.CWEL.vcxproj.filters  color.cpp  color.h  hashing.cpp  hashing.h  shortns.h  streaming.cpp  streaming.h  vector_ext.cpp  vector_ext.h
include/: Color.h  Color.hpp  DependencyProperty.hpp  Event.hpp  IGetHashCode.h  IToString.h  Object.h  Object.hpp  VectorExtensions.hpp  color.h  hashing.h  streaming.h  vector_ext.h
source/: Color.cpp  IGetHashCode.cpp  IToString.cpp  Object.cpp  color.cpp  hashing.cpp  vector_ext.cpp
src/: Color.cpp  DependencyProperty.cpp  Event.cpp  IGetHashCode.cpp  IToString.cpp  Object.cpp  VectorExtensions.cpp  Veritaware.Toolkits.CWEL.cpp
